[package]
name = "lailai"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#异步
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
futures = "0.3"

#once_cell
once_cell = "1"

#json/yaml解析
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"

#生成解析二维码
qr2term = "0.3.0"
bardecoder = "0.4.0"
image = "0.24"
#集合处理
#itertools = "0.10"
#时间处理
chrono = "0.4"

#日志相关
tracing = "0.1"
tracing-subscriber = { version = "0.3" }

#sendreport缓存数据
sled = "0.34"


#qq协议库
ricq = { git = "https://github.com/lz1998/ricq" }

#错误处理
thiserror = "1"
anyhow = "1"

#控制台
dialoguer = "0.10"
async-recursion = "1.0.4"

#队列
lapin = "2"
futures-lite = "1.13.0"

[target.'cfg(target_os = "linux")'.dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }
#reqwest
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
] }
fflogsv1 = { path = "./fflogsv1" }
opendota = { path = "./opendota" }

[target.'cfg(not(target_os = "linux"))'.dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
fflogsv1 = { path = "./fflogsv1", default-features = false, features = [
    "native-tls",
    "json",
] }
opendota = { path = "./opendota", default-features = false, features = [
    "native-tls",
] }
reqwest = { version = "0.11" }

[target.'cfg(any(target_os = "windows",target_os = "macos"))'.dependencies]
wry = "0.27"


[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
[profile]

[workspace]
members = ["fflogsv1", "opendota"]

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
image = "ghcr.io/cross-rs/aarch64-unknown-linux-gnu:latest"

[package.metadata.cross.target.x86-64-unknown-linux-gnu]
image = "ghcr.io/cross-rs/x86-64-unknown-linux-gnu:latest"
