[package]
name = "fflogsv1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
log = "0.4"
tokio = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
thiserror = "1"
[target.'cfg(target_env="musl")'.dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "native-tls-vendored",
    "json",
] }
[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
