[package]
name = "fflogsv1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { default-features = false, version = "0.11" }
tracing = "0.1"
tokio = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
thiserror = "1"
stopwatch = "0.0.7"

[features]
default = ["rustls-tls", "json"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
json = ["reqwest/json"]