[package]
name = "opendota"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1"
reqwest = { default-features = false, version = "0.11" }
tracing = "0.1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
once_cell = "1"
parking_lot = "0.12"

[features]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
default = ["rustls-tls"]
